--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-frontend-developer/buffers": "^2.0.1",
     "axios": "^1.3.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
